--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 bin/*
+sample/*/smali/
+sample/*/*.dex
 .settings/
 *.class
 *.swp
@@ -10,7 +12,7 @@ src/antlr3/TranslateWalker.java
 src/antlr3/TranslateWalker.tokens
 src/antlr3/update.bat
 smalioutput/
-.idea/
+.idea/*
 out/
 *.iml
 
